# manifoldRNC

./: .gitignore  .travis.yml  LICENSE  Main.hs  PCA.hs  README.md  cabal.sandbox.config  init_present.hs  manifoldRNC.cabal  manifoldRNC.cabal~  stack.yaml
.cabal-sandbox/x86_64-linux-ghc-7.10.2-packages.conf.d/: Chart-1.5.4-cc9df9f91c2b7e5af9a881d1843b6533.conf  Chart-cairo-1.5.4-e81b4a716008123b79f6ff5d097e8650.conf  StateVar-1.1.0.1-d26cc6243f7eb7d8194c4fd0dccc0689.conf  adjunctions-4.2.2-e24684cc5cb0c97ba9752746e37d1b8c.conf  base-orphans-0.4.4-61f87fbe40b70a96b4f01742198bd89e.conf  bifunctors-5-06680d8819c4b9bbf1676ae1390767b5.conf  cairo-0.13.1.0-d1a8d4db693a4f49e7b96d5520e545c7.conf  colour-2.3.3-3416a1f283dcec7bec80ddcf56dd072f.conf  comonad-4.2.7.2-b1b638c93067c190c2ec535102389f4b.conf  contravariant-1.3.3-b12b14e5855d051e62e0470d30aee157.conf  distributive-0.4.4-8ccf7d9b4dba827f6bbdf2f9c6ea65a1.conf  exceptions-0.8.0.2-b08bd0de7dff383d124cad3f4c34eddd.conf  fgl-5.5.2.3-37a0467cf1f4023c287493a934900708.conf  free-4.12.1-e22a2dc4665435fd8d53e39b3530bcae.conf  hashable-1.2.3.3-80550537c7909140be870afef59b4dda.conf  hmatrix-0.17.0.1-e215c08fbfe947db2f3fb74820293dc3.conf  kan-extensions-4.2.3-24014274bd1e4fee2e3636b75856bf03.conf  lens-4.13-95a130ea30ca3a838ac646bc12f4c0d1.conf  nats-1-3ca5cbcec233c17da785d5f27705643c.conf  operational-0.2.3.2-08bd38f672e91ab29803af67834a49cf.conf  package.cache  parallel-3.2.0.6-1e3b7b57355fcf35c2a5d9b89c06137c.conf  prelude-extras-0.4.0.2-9cd8ab3397fab5f95aeab2ca5eb4ba56.conf  primitive-0.6.1.0-842c44bae4dcc3c70cd2af42599ab93d.conf  profunctors-5.1.1-94b0f7034cf809183c61149785a8ff2d.conf  reflection-2.1-c963812bcf774939a9bbb4b4c136dab4.conf  semigroupoids-5.0.0.4-02d14ffb9b70e76d92bc716fe1b6eb43.conf  semigroups-0.17.0.1-614f148d3938a364e9de81982cf5c855.conf  split-0.2.2-bdc181dc0cb027cda71092df3fe3fb02.conf  stm-2.4.4-2526ff89874f899372b2e4f544bb03cd.conf  storable-complex-0.2.2-8f2416af7a2ee3c9cd620cc714b1aad9.conf  tagged-0.8.1-8fb7724b78ef88e44ca8950c77a173f6.conf  text-1.2.1.3-202edba6fea901191194d38d810da662.conf  transformers-compat-0.4.0.4-3ca5cbcec233c17da785d5f27705643c.conf  vector-0.11.0.0-a3d62f13dd9bf59f0f8bbb8613e9a160.conf  (+2 more)
data/: torus.txt  torusData5k.txt
src/: DenseGraph.hs  GraphBuilder.hs  InterpolationAlgorithms.hs  Main.hs  NearestNeighbor.hs  PCA.hs  Plots.hs  Utils.hs
(+866 files in other folders)
