name:                manifoldRNC
version:             0.1.0.0
synopsis:            My first venture into manifold learning in Haskell.
description:         This package currently only contains an implementation
                     of "Fast Manifold Learning Based on Normal Coordinates" by Andres Brun et. al.
license:             PublicDomain
license-file:        LICENSE
author:              Emmanuel Denloye-Ito
maintainer:          eod8tb@virginia.edu
copyright:           2015 Emmanuel Denloye-Ito
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
source-repository head
  type: git
  location: git://github.com/emmanueldenloye/manifoldRNC.git

library
  ghc-options:         -O2 -Wall
  hs-source-dirs:      src
  exposed-modules:     GraphBuilder
                       InterpolationAlgorithms
                       NearestNeighbor
                       Plots
                       Utils
  build-depends:       base >=4.8 && < 4.9
                     , Chart       >= 1.3 && < 1.6
                     , Chart-cairo >= 1.3 && < 1.6
                     , containers >= 0.4 && < 0.6
                     , deepseq >= 1.4
                     , filepath    >= 1.3 && < 1.5
                     , fgl >= 5.4 && < 5.6
                     , hmatrix     >= 0.17 && < 0.18
                     , random >= 1.0 && < 1.2
                     , repa <= 3.4.0.2
                     , strict >= 0.3
                     , unix >= 2.6 && < 2.8
                     , vector < 0.10.9.3 || > 0.10.9.3 && < 0.10.12.0 || > 0.10.12.0
                     , vector-algorithms > 0.7 && <= 0.7.0.1
  default-language:    Haskell2010

executable manifoldRNC
  main-is:             Main.hs
  build-depends:       base
                     , manifoldRNC
                     , Chart
                     , Chart-cairo
                     , containers
                     , deepseq
                     , fgl
                     , filepath
                     , hmatrix
                     , random
                     , repa
                     , strict
                     , unix
                     , vector
  ghc-options:         -O2 -Wall "-with-rtsopts=-N"
  default-language:    Haskell2010
